--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
             <version>3.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_${scala.version}</artifactId>
+            <version>2.2.4</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
